# agent_framework_template

./: .gitattributes  .gitignore  BRANCHING.md  BUILD_STATUS.md  CAPABILITY_STATUS.md  CLAUDE.md  DART_DEFINE_FLAGS.md  EDUCATION_GATE_MANIFEST.md  EDUCATION_GATE_START.md  EDUCATOR_NOTES.md  FRAMEWORK_QUIZ.md  LICENSE  README.md  WALKTHROUGH.md  build.yaml  dart_test.yaml  framework-lineage.yaml  pubspec.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: FRAMEWORK_SPECIFICATION.md  MAIN_CLEANUP_WALKTHROUGH.md  PHASE3-QUICK-REFERENCE.md  STEWARD_ARCHITECTURE.md  agent_framework_template_self_review.md  available_model_research_report.md  claude_agentic_journal_public_research_20260226.md  consolidated-enhancement-plan.md  diviner-dojo-framework-presentation.html  framework-enhancements-inventory.md  github_research.md  how-to-use-presentation.html  manual-test-plan.md  phases-6-11-project-plan.md  product-brief.md  unified-project-analysis.md
integration_test/: manual_test_automation.dart  smoke_test.dart  voice_mode_test.dart
lib/: app.dart  main.dart
linux/: CMakeLists.txt
metrics/: deploy_log.jsonl  emulator_test_log.jsonl  knowledge_pipeline_log.jsonl  quality_gate_log.jsonl
scripts/: backfill_findings.py  backfill_turn_content.py  backup_utils.py  bump_version.py  check_stale_adoptions.py  check_template_remote.sh  close_discussion.py  compute_agent_effectiveness.py  create_discussion.py  deploy.py  enforce_forgetting_curve.py  extract_findings.py  generate_transcript.py  ingest_events.py  ingest_reflection.py  init_db.py  knowledge_dashboard.py  mine_patterns.py  pipeline_utils.py  quality_gate.py  record_education.py  record_yield.py  redact_secrets.py  surface_candidates.py  test_bump_version.py  test_on_emulator.py  unify_sightings.py  write_event.py
src/: __init__.py  database.py  error_handlers.py  exceptions.py  main.py  models.py  routes.py
test/: app_routing_test.dart  app_theme_wiring_test.dart
tests/: conftest.py  test_lineage.py  (+5 more)
(+959 files in other folders)
