[project]
name = "agentic-framework-template"
version = "0.1.0"
description = "AI-Native Agentic Development Framework template with Todo API test project"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
